[package]
name = "tokio-gcp"
version = "0.1.0"
authors = ["Max Seiden <max@sigmacomputing.io>"]

[dependencies]
base64 = "0.5"
chrono = "0.3"
env_logger = "0.3"
hyper = { git = "https://github.com/hyperium/hyper" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
futures = "0.1"
jsonwebtoken = "2.0"
lazy_static = "0.2"
log = "0.3"
openssl = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
url = "1.4"
