[package]
name = "tokio-gcp"
version = "0.1.0"
authors = ["Max Seiden <max@sigmacomputing.io>"]

[dependencies]
base64 = "0.5"
chrono = "0.3"
env_logger = "0.3"
hyper = "0.11"
hyper-tls = "0.1"
futures = "0.1"
jsonwebtoken = { git = "https://github.com/mhseiden/jsonwebtoken.git", rev = "05041bb" }
lazy_static = "0.2"
log = "0.3"
openssl = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
url = "1.4"
