[package]
name = "tokio-gcp"
version = "0.1.0"
authors = ["Max Seiden <max@sigmacomputing.io>"]

[dependencies]
base64 = "0.9"
chrono = "0.4"
env_logger = "0.3"
flate2 = "0.2"
hyper = "0.11.27"
hyper-tls = "0.1"
futures = "0.1.17"
jsonwebtoken = "4.0"
lazy_static = "1.0"
log = "0.3"
openssl = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
url = "1.7"
